--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3471,10 +3471,10 @@ input, select, textarea {
 		}
 
 		#banner:after {
-			background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
+			background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.98), rgba(23, 24, 32, 0.80)), url("images/overlay.png");;
+			background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.98), rgba(23, 24, 32, 0.80)), url("images/overlay.png");;
+			background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.98), rgba(23, 24, 32, 0.80)), url("images/overlay.png");;
+			background-image: linear-gradient(top, rgba(23, 24, 32, 0.98), rgba(23, 24, 32, 0.80)), url("images/overlay.png");;
 			content: '';
 			display: block;
 			height: 100%;
@@ -3527,6 +3527,29 @@ input, select, textarea {
 
 	body.is-touch #banner {
 		background-attachment: scroll;
+	}
+
+	.highlights{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	.iam{
+	  color: white;
+		font-size: 45px;
+		padding: 15px;
+		font-weight: 100;
+	}
+	.text{
+	  color: white;
+		/* border-right: 2px solid red; */
+		font-size: 45px;
+		font-family: sans-serif;
+		color: rgb(0, 255, 200);
+	}
+	.typed-cursor{
+		font-size: 40px;
+		padding-left: 3px;
 	}
 
 /* Footer */
