--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,7 @@
   width: 12px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #e44c65;
+  background-color: #08335d;
 }
 
 html,
@@ -2294,7 +2294,7 @@ header.major {
 }
 
 header.major:after {
-  background: #e44c65;
+  background: #0059ff;
   content: "";
   display: inline-block;
   height: 0.2em;
@@ -2599,11 +2599,11 @@ input[type="radio"] + label:before {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  font-size: .81rem;
-  transition: .3s;
+  font-size: 0.81rem;
+  transition: 0.3s;
 }
-.icon.major.alt:hover{
-  background-color: #0c7448;
+.icon.major.alt:hover {
+  background-color: #0059ff;
 }
 
 .icon.major.alt:before {
@@ -3074,10 +3074,10 @@ input[type="button"]:disabled,
   animation: next 2s linear infinite alternate;
 }
 @keyframes next {
-  0%{
+  0% {
     transform: translateY(-10px);
   }
-  100%{
+  100% {
     transform: translateY(10px);
   }
 }
@@ -3608,18 +3608,23 @@ body.landing .dropotron.level-0 {
 #header nav ul li a,
 #header nav ul li span {
   border: 0;
-  color: inherit;
+  color: rgb(231, 231, 231);
   display: inline-block;
   height: inherit;
   line-height: inherit;
   outline: 0;
 }
 
+#header nav ul li a:hover,
+#header nav ul li span:hover {
+  color: #0051ff !important;
+}
 #header nav ul li a.button,
 #header nav ul li span.button {
   height: 2em;
   line-height: 2em;
   padding: 0 1.25em;
+  background-color: #0059ff;
 }
 
 #header nav ul li a:not(.button):before,
@@ -3673,29 +3678,21 @@ body.landing #header {
 
 #banner:after {
   background-image: -moz-linear-gradient(
-      top,
-      rgba(23, 24, 32, 0.98),
-      rgba(23, 24, 32, 0.8)
-    ),
-    url("images/overlay.png");
+    top,
+    rgb(0 6 63 / 73%),
+    rgb(38 0 31 / 82%)
+  );
   background-image: -webkit-linear-gradient(
-      top,
-      rgba(23, 24, 32, 0.98),
-      rgba(23, 24, 32, 0.8)
-    ),
-    url("images/overlay.png");
+    top,
+    rgb(0 6 63 / 73%),
+    rgb(38 0 31 / 82%)
+  );
   background-image: -ms-linear-gradient(
-      top,
-      rgba(23, 24, 32, 0.98),
-      rgba(23, 24, 32, 0.8)
-    ),
-    url("images/overlay.png");
-  background-image: linear-gradient(
-      top,
-      rgba(23, 24, 32, 0.98),
-      rgba(23, 24, 32, 0.8)
-    ),
-    url("images/overlay.png");
+    top,
+    rgb(0 6 63 / 73%),
+    rgb(38 0 31 / 82%)
+  );
+  background-image: linear-gradient(top, rgb(0 6 63 / 73%), rgb(38 0 31 / 82%));
   content: "";
   display: block;
   height: 100%;
@@ -3754,7 +3751,7 @@ body.is-touch #banner {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 .iam {
   color: white;
@@ -3766,8 +3763,9 @@ body.is-touch #banner {
   color: white;
   /* border-right: 2px solid red; */
   font-size: 35px;
-  font-family: 'Open Sans', sans-serif;
-  color: rgb(0, 255, 200);
+  font-family: "Open Sans", sans-serif;
+  color: rgb(0 169 255);
+  font-weight: bold;
 }
 .typed-cursor {
   font-size: 30px;
@@ -4105,10 +4103,10 @@ body.is-touch #banner {
   #banner .content header h2 {
     font-size: 1.5em;
   }
-  #banner .content header .highlights .iam{
+  #banner .content header .highlights .iam {
     font-size: 1.3em;
   }
-  #banner .content header .highlights .text{
+  #banner .content header .highlights .text {
     font-size: 1.2em;
   }
 
@@ -4377,15 +4375,15 @@ header {
   font-family: "Open Sans", sans-serif !important;
 }
 
-.service-we-offer{
+.service-we-offer {
   font-family: "Open Sans", sans-serif !important;
   color: rgb(226, 226, 226);
-  font-size: 1.10em;
+  font-size: 1.1em;
 }
-.exprience-heading{
-  color: #00bb73;
+.exprience-heading {
+  color: #0059ff;
 }
-.experience-box{
+.experience-box {
   padding: 2rem;
   backdrop-filter: blur(7px);
   background-color: #181920a8;
@@ -4395,7 +4393,7 @@ header {
   height: 300px;
   border-radius: 8px;
 }
-.container .service-all-box{
+.container .service-all-box {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -4403,23 +4401,28 @@ header {
   gap: 6px;
   margin: 0 auto;
 }
-#four-copy{
-  background:url("./images/exprience-bg.jpg") no-repeat center center/cover;
+#four-copy {
+  background: url("./images/exprience-bg.jpg") no-repeat center center/cover;
   position: relative;
   z-index: 1;
 }
-#four-copy::before{
+#four-copy::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, rgba(0, 0, 48, 0.664),rgba(53, 0, 9, 0.658));
+  background: linear-gradient(
+    45deg,
+    rgba(0, 0, 48, 0.664),
+    rgba(53, 0, 9, 0.658)
+  );
   z-index: -1;
 }
-@media screen and (max-width:500px){
-  .experience-box{
+@media screen and (max-width: 500px) {
+  .experience-box {
     padding: 1rem;
   }
 }
+
