change content background for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,8 +118,7 @@ header h2 {
 }
 .exprience-heading {
   color: #4a22ff !important;
-  font-family: "Open Sans", sans-serif !important;
-  font-weight: 500;
+  font-family: "Electrolize", sans-serif !important;
 }
 .experience-box {
   padding: 2rem;
@@ -166,5 +165,8 @@ header h2 {
   .service-box {
     flex-direction: column-reverse;
     height: 500px !important;
+  }
+  section.spotlight .content{
+    background: rgb(255, 255, 255);
   }
 }
